classDiagram

%% =======================
%% CLASSE DE BASE
%% =======================
class BaseModel {
    <<abstract>>
    +UUID id
    +datetime created_at
    +datetime updated_at
    +save()
    +update()
}

%% =======================
%% ENTITÉS PRINCIPALES
%% =======================
class User {
    +string first_name
    +string last_name
    +string email
    +string password
    +add_place(place)
    +add_review(review)
}

class Place {
    +string title
    +string description
    +float price
    +float latitude
    +float longitude
    +add_review(review)
    +add_amenity(amenity)
}

class Review {
    +int rating
    +string comment
    +validate_rating()
}

class Amenity {
    +string name
    +string description
}

%% =======================
%% HÉRITAGE
%% =======================
User --|> BaseModel
Place --|> BaseModel
Review --|> BaseModel
Amenity --|> BaseModel

%% =======================
%% RELATIONS
%% =======================

User "1" --> "0..*" Place : owns
User "1" --> "0..*" Review : writes
Place "1" --> "0..*" Review : receives
Place "0..*" --> "0..*" Amenity : has
